# estudo_rust

./: .gitignore  Cargo.toml  README.md  state.json
src/: main.rs  process.rs  state.rs
src/json_serialization/: mod.rs  todo_item.rs  todo_items.rs
src/todo/: mod.rs
src/todo/structs/: base.rs  done.rs  pending.rs
src/todo/structs/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/todo/: create.rs  edit.rs  get.rs  mod.rs  utils.rs
