[package]
name = "web"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
serde_json = {version = "1.0.85", default-features = false, features= ["alloc"]}
futures = "0.3.25"
serde = "1.0.147"
serde_derive = "1.0.147"